# worlds_slowest_neural_network

./: .flake8  .gitignore  README.md  pyproject.toml
doodle_classifier/: main.py  neural_network.py  train.pkl
doodle_classifier/utils/: lists.py
tests/: test_doodle_classifier.py
wsnn/: data.py  layer.py  main.py  neural_network.py  pep_horror.py
