[tool.poetry]
name = "wsnn"
version = "0.1.0"
description = ""
authors = ["Havardox <harald.varner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
